# codejam

./: README.md
ArgParse/: example1.py
Elastic/: test
EnumStuff/: test.py
Exceptions/: funcs.py  sample.py
GSMmodem/: GSM.py  Numerical.py  SMS.py  test
GaryHomework/: addauthor.py  gary_hw1.py  gary_hw2.py  lotto.py  mysql_newauthorssh.py  zombiegame01.py
Hackserver/: Server.py  Server2.py  c700-oo-001c9.py  zombot.py
Interview/: primenumbers.py  tmp.json
LearnRust/: helloworld  helloworld.rs
MultiThreadProto/: test1.py
PackagingTutorial/: setup.cfg
SubhadipRoy/: input.txt  parser.py
Templates/: command_template.py
TestExec/: config.json  test.config.json  testexec  testexecconfig.py  testexectest.py  testexecutor  tests.py
TestExec/testexec/: autodialertest.py  config.py  mttest.py  test.py
Tolentino/: homework1
WebService/: .bottlesrv.py.swp  bottlesrv.py  cherrysrv
