[metadata]
name = package-alpha
version = 0.0.1
author = Gantry York
author_email = gantry.york@gmail.com
description = Just an exercise in setuptools
long_description = file: README.md
long_description_content_type = text/markdonw
url = https://github.com/gantryyork/codejam/PackagingTutorial
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
